# embcache

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
embcache/: __init__.py  __main__.py  cache.py  cli.py  info.py  keys.py  normalize.py  pricing.py  report.py  serialize.py  stats.py  tokenizers.py
embcache/backends/: __init__.py  base.py  memory_backend.py  redis_backend.py  sqlite_backend.py
examples/: prove_it.py
tests/: test_async.py  test_backends.py  test_cache.py  test_info_cli.py  test_keys.py  test_memory_backend.py  test_normalize.py  test_persistence.py  test_serialize.py  test_tokenizers.py
