[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embcache"
version = "0.1.0"
description = "A drop-in caching layer for text embeddings that proves exactly how much it saved."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Roshan Gurumurthy", email = "roshangurumurthy5@gmail.com" }]
keywords = ["embeddings", "cache", "openai", "llm", "vectors", "cost-savings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
embcache = "embcache.cli:main"

[project.urls]
Homepage = "https://github.com/roshangurumurthy/embcache"
Repository = "https://github.com/roshangurumurthy/embcache"

[project.optional-dependencies]
redis = ["redis>=4.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "redis>=4.0", "fakeredis>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["embcache"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
